# typescript-wasm-bindgen

./: Cargo.toml  README.md
.github/workflows/: rust-audit.yaml  rust.yml
crates/typescript-wasm-bindgen-codegen/: Cargo.toml
crates/typescript-wasm-bindgen-codegen/src/: lib.rs
crates/typescript-wasm-bindgen-macros/: Cargo.toml
crates/typescript-wasm-bindgen-macros/src/: lib.rs
examples/simple/: package.json  tsconfig.json  webpack.config.ts
examples/simple/src/: index.html  index.ts
examples/simple/wasm/: Cargo.toml
examples/simple/wasm/src/: lib.rs
src/: codegen.rs  lib.rs
tests/: Cargo.toml  build.rs  test.d.ts  test.rs
tests/src/: lib.rs  proc_macro_test.rs
tests/success/: function.rs
tests/ts/: test_function.ts
