[package]
name = "typescript-wasm-bindgen"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
typescript-wasm-bindgen-codegen = { path = "crates/typescript-wasm-bindgen-codegen" }
typescript-wasm-bindgen-macros = { path = "crates/typescript-wasm-bindgen-macros" }

[workspace]
members = [
    "crates/typescript-wasm-bindgen-codegen",
    "crates/typescript-wasm-bindgen-macros",
    "tests"
]