[package]
name = "typescript-wasm-bindgen-codegen"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
syn = { version = "^1.0" }
quote = { version = "^1.0" }
proc-macro2 = { version = "^1.0" }
swc_common = { version = "^0.10" }
swc_ecma_parser = { version = "^0.44" }
swc_ecma_ast = { version = "^0.36" }
