[package]
name = "typescript-wasm-bindgen-codegen"
version = "0.1.1"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Parse typescript file and generates wasm-bindgen javascript import on the fly"
repository = "https://github.com/dlunch/typescript-wasm-bindgen"
readme = "../../README.md"
categories = ["wasm", "web-programming"]
keywords = ["wasm-bindgen"]

[lib]
doctest = false

[dependencies]
syn = { version = "^1.0" }
quote = { version = "^1.0" }
proc-macro2 = { version = "^1.0" }
swc_common = { version = "^0.14" }
swc_ecma_parser = { version = "^0.78" }
swc_ecma_ast = { version = "^0.70" }
