[package]
name = "typescript-wasm-bindgen-macros"
version = "0.1.1"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Parse typescript file and generates wasm-bindgen javascript import on the fly"
repository = "https://github.com/dlunch/typescript-wasm-bindgen"
readme = "../../README.md"
categories = ["wasm", "web-programming"]
keywords = ["wasm-bindgen"]

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "^2.0" }
proc-macro-error = { version = "^1.0" }

typescript-wasm-bindgen-codegen = { path = "../typescript-wasm-bindgen-codegen", version = "0.1.1" }